# python-project-wizard

./: .gitignore  .pre-commit-config.yaml  404.html  CONTRIBUTING.md  CONTRIBUTING.rst  HISTORY.md  README.md  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  reload.sh  repo.sh  sitemap.xml  tox.ini  versions.json
.github/workflows/: dev.yml  docs.yml  main.yml  release.yml
1.3.5.dev/: 404.html  index.html  sitemap.xml
1.3.5.dev/console_script_setup/: index.html
1.3.5.dev/faq/: index.html
1.3.5.dev/history/: index.html
1.3.5.dev/pypi_release_checklist/: index.html
1.3.5.dev/search/: search_index.json
1.3.5.dev/tutorial/: index.html
console_script_setup/: index.html
docs/: console_script_setup.md  faq.md  history.md  prompts.md  pypi_release_checklist.md  travis_pypi_setup.md  troubleshooting.md  tutorial.md
faq/: index.html
history/: index.html
hooks/: aioproc.py  post_gen_project.py
ppw/: cli.py
pypi_release_checklist/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.project_slug}}/: .docstring.tpl  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .pre-commit-config.yml  .readthecods.yaml  .readthecods.yml  CONTRIBUTING.md  README.md  github.sh  mkdocs.yml  mypy.ini  pyproject.toml  pyrightconfig.json  repo.sh  tox.ini
{{cookiecutter.project_slug}}/.github/workflows/: dev.yml  docs.yml  main.yml  release.yml
{{cookiecutter.project_slug}}/docs/: api.md  authors.md  contributing.md  history.md  installation.md  usage.md
{{cookiecutter.project_slug}}/tests/: test_app.py  test_{{cookiecutter.project_slug}}.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: cli.py
